external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_method_autocomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:1:9
  │
1 │ #[allow(ide_path_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:19:24
   │
19 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:20:24
   │
20 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number
